--- a/app/(articles)/page.css
+++ b/app/(articles)/page.css
@@ -1,20 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@900;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,500;1,200&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,700..800&display=swap');
 .hljs {
     display: block;
     overflow-x: hidden;
-    background: #fefcfa;
     color: #4d4d4c;
     padding: 20px 20px;
-    margin-bottom: 40px;
+    margin: 40px 0;
     font-size: 16px;
     border: 1px solid #f5f5f5;
-    border-radius: 8px;
-}  
-
+    border-radius: 6px;
+}
 
 .listoficonsreact{
     display: block;
-    width: 60%;
-    margin: 0 auto;
+    width: 55%;
+    margin: 120px auto 0 auto;
     height: 100px;
     background: #fff;
 }
@@ -27,7 +35,7 @@
 .artinfo-user-art img{
     width: 43px;
     height: 43px;
-    border: 1px dashed #ccc;
+    border: 1px dashed rgb(55, 44, 34);
     border-radius: 50px;
 }
 .aua-date-time{
@@ -39,10 +47,10 @@
 .aua-date-time p{
     display: block;
     color: #222;
-    font-size: 15px;
+    font-size: 14px;
 }
 .aua-date-time h3{
-    font-size: 12px;
+    font-size: 11px;
     color: #666;
     font-weight: 400;
 }
@@ -51,9 +59,9 @@
     width: 100%;
     height: 50px;
     align-items: center;
-    border-top: 1px dashed #eee;
+    border-top: 1px solid #eee;
     justify-content: space-between;
-    border-bottom: 1px dashed #eee;
+    border-bottom: 1px solid #eee;
 }
 
 .react-comment{
@@ -77,20 +85,20 @@
 }
 .copy-aud-save{
     display: flex;
-    gap: 0 15px;
+    gap: 0 18px;
 }
 .copy-aud-save img{
-    width: 23px;
+    width: 25px;
 }
 .copy-aud-save img:nth-child(2){
     width: 21px;
 }
 .copy-aud-save img:nth-child(3){
-    width: 21px;
+    width: 20.5px;
 }
 
 .artic {
-    width: 60%;
+    width: 55%;
     margin: 0 auto;
 }
 .artic p{
@@ -101,15 +109,13 @@
     font-weight: 300;
 }
 .artic h1{
-    font-family: 'Roboto', sans-serif;
-    font-size: 40px;
+    font-size: 38px;
     font-weight: 700;
     line-height: 51px;
     color: #111;
     padding: 70px 0 25px 0;
 }
 .artic h2{
-    font-family: 'Wix Madefor Text', sans-serif;
     font-size: 27px;
     font-weight: 700;
     line-height: 40px;
@@ -117,10 +123,19 @@
     padding: 35px 0 10px 0;
 }
 .artic h3{
-    font-family: 'Inter', sans-serif;
     font-size: 22px;
     font-weight: 700;
     line-height: 40px;
     color: #111;
     padding: 25px 0 0 0;
+}
+li{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    list-style: none;
+    padding: 5px 0;
+    color: #141d27;
+}
+strong{
+    font-family: 'Poppins', sans-serif;
+    border-bottom: 1px dashed #999;
 }
