--- a/app/components/headtail/Footer/footer.css
+++ b/app/components/headtail/Footer/footer.css
@@ -1,6 +1,7 @@
 .lastpartofhp{
     display: flex;
     width: 100%;
+    margin-top: 50px;
     padding: 8px 0;
     background: #f5f4f1;
     justify-content: center;
