--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+h1{
+  font-family: 'Roboto',sans-serif;
+}
+h2,h3,h4,h5,h6{
+  font-family: 'Poppins', sans-serif;
+}
