--- a/app/components/collection/collection.css
+++ b/app/components/collection/collection.css
@@ -47,17 +47,19 @@
     margin-top: 12px;
 }
 .hp-leftofarticle .hp-desc{
-    color: #777;
+    color: #666;
     font-size: 15px;
     width: 90%;
     font-family: 'Work sans', sans-serif;
     margin-top: 9px;
+    font-weight: 500;
 }
 .hp-collection .hp-listofcollection .hp-leftofarticle .hp-dateandreadtime{
     font-size: 12px;
-    color: #777;
+    color: #666;
     margin-top: 15px;
     font-family: 'Poppins', sans-serif;
+    font-weight: 500;
 }
 
 
