--- a/app/components/headtail/Navbar/navbar.css
+++ b/app/components/headtail/Navbar/navbar.css
@@ -19,7 +19,7 @@ font-family: 'Rubik', sans-serif;
 }
 .navbar .logo{
     width: auto;
-    height: 37px;
+    height: 36px;
     margin-left: 20px;
 }
 .navbar ul{
@@ -33,9 +33,9 @@ font-family: 'Rubik', sans-serif;
 }
 .navbar ul li a{
     text-decoration: none;
-    color: #333;
+    color: #444;
     font-size: 15px;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-weight: 500;
 }
 .navbar .search{
@@ -44,7 +44,7 @@ font-family: 'Rubik', sans-serif;
     width: auto;
     height: 39px;
     align-items: center;
-    margin:15px 0 10px 395px;
+    margin:15px 0 10px 482px;
     padding: 0 8px 0 0;
     border: 1px solid #f4f4f4;
     border-radius: 40px;
